--- a/content/post/2018-04-12-powershell-profile-functions.Rmd
+++ b/content/post/2018-04-12-powershell-profile-functions.Rmd
@@ -4,7 +4,6 @@ author: ~
 date: '2018-04-12'
 slug: powershell-profile
 categories: [PowerShell]
-# tags: []
 output:
   blogdown::html_page:
     # toc: true
@@ -12,102 +11,48 @@ output:
     number_sections: true
 ---
 
-Until starting my current position, I had been a pretty strict Mac OS user. As one can expect from a job in the public sector however, I quickly had to face the reality of full-time Windows use, which I had successfully avoided since my days as a high school student with a laptop that barely ran Vista. While initially hesitant, I’ve become gradually more accustomed to and fond of the Windows environment – even running Windows 10 as the primary operating system on my desktop at home.
-
-My Windows transition also led me to become familiar with PowerShell. While a bit more obtuse that Unix’s bash shell, PowerShell has grown on me over the past few years and has become an integral part of my pipeline at work and at home.
-
-Something I did not find out about until a few months in to my PowerShell use, but which has ultimately become irreplaceable, is the PowerShell Profile. This Profile allows user to save functions, aliases, and general shell settings between sessions, and automatically loads when the terminal starts.
-
-[How-To Geek has a good article](https://www.howtogeek.com/50236/customizing-your-powershell-profile/) that covers how to set up a basic PowerShell profile, which I recommend reading before moving forward. All the code below can go in your PS Profile in any order, but I'll present it in the order that makes the most sense to me.
+For those unfamiliar, the PowerShell profile (`Microsoft.Powershell_profile.ps1`) is the Windows PowerShell equivalent to the Linux and Mac OS `.bashrc` file, which loads when the terminal starts and allows user to save functions, aliases, and general shell settings between sessions. [How-To Geek has a good article](https://www.howtogeek.com/50236/customizing-your-powershell-profile/) that covers how to set up a basic PowerShell profile, which I recommend reading before moving forward. All the code below can go in your PS Profile in any order, but I'll present it in the order that makes the most sense to me.
 
 # General Terminal Setup
 
-I tend to prefer light (or colorful!) text on dark backgrounds in all the IDEs I use, and PowerShell is no exception. Here, we'll set our terminal colors, change the width of the terminal to 80 characters, and give our window a more fun title.
-
+Like many, I prefer dark themes in all the programs I use, when available, and PowerShell is no exception. Your PowerShell profile gives you the option to tweak many UI parameters of your terminal window, including font and background colors, window size, and the window title (demonstrated below).
 
 ```powershell
-$host.ui.RawUI.WindowTitle = "Beep Boop Terminal"
-
 $Shell = $Host.UI.RawUI
 $shell.BackgroundColor = "Black"
 $shell.ForegroundColor = "White"
 
 $size = $Shell.WindowSize
-$size.width=80
-$size.height=25
+$size.width = 80
+$size.height = 25
+
+$host.ui.RawUI.WindowTitle = "Beep Boop Terminal"
 ```
 
 # PowerShell Path
 
-While most Windows-based developers are probably familiar with adding variables to their system PATH, there are some scripts I've written/downloaded that I only want PowerShell, not the whole computer, to have easy access to. As such, we'll append our PowerShell environment's *Path* with the directories where our scripts reside. A few examples are below:
-
+While most Windows-based developers are familiar with adding variables to their system PATH via System Properties, there are some directories that I only want PowerShell, not the whole computer, to index As such, we'll append our PowerShell environment's `Path` with the directories where our scripts reside.
 
 ```powershell
-$env:Path += ";C:\Users\Ry\Documents\WindowsPowerShell"
-$env:Path += ";C:\Python27\Scripts\Personal"
+$env:Path += ";C:\Users\Ryan\Documents\WindowsPowerShell"
 ```
-
-Now any shell-specific Python or PowerShell scripts I have can be called in the terminal!
 
 # Aliases
 
 PowerShell [already utilizes a lot of aliases](https://ss64.com/ps/) to make the transition from bash simpler -- familiar commands like `ls`, `mkdir`, and `cd` are available out of the box, and much easier to remember than their PowerShell names even for users who are unfamiliar with bash (for reference, those names are `Get-ChildItem`, `New-Item -Type folder`, and `Set-Location`). Within our PowerShell Profile, we can also make aliases for either native PowerShell commands, or, as I've done, to open programs via the terminal. Some programs, like VSCode (`code`), have existing aliases you can use to call them from PowerShell, but here are some that I frequently use.
 
-
 ```powershell
 	new-item alias:np -value "C:\Program Files (x86)\Notepad++\notepad++.exe"
 	new-item alias:vim -value "C:\Program Files (x86)\Vim\vim80\vim.exe"
-	new-item alias:python-27 -value "C:\Python27\python.exe"
 ```
 
 # Functions
 
-The real benefit of having a PowerShell profile is being able to write down all the brilliant functions you've written (or copied from Stack Overflow) to use months down the road! 
+The real benefit of having a PowerShell profile is being able to write down all the brilliant functions you've written (or copied from Stack Overflow) to use months down the road! Here are some examples of various function types that I regularly use.
 
-## General Use {.tabset .tabset-pills .tabset-fade}
-
-### Edit-Profile
-
-Opens your PowerShell Profile with NotePad++ (assumes that alias is defined as above).
-
-
-```powershell
-Function Edit-Profile
-{
-  np $profile
-}
-```
-
-### Shortcut to Directory
-
-Changes directory to a specified location, pretty simple.  
-
-
-```powershell
-Function projects
-{
-  cd D:\data\lab\code\
-}
-```
-
-### Change Prompt
-
-I can't stand when the text-prompt shows the entire filepath of the directory I'm in, so this function, which is automatically called on startup an never needs to be touched again, just shows the name of the directory where I currently reside -- so much cleaner.
-
-
-```powershell
-Function prompt
-{
-  $p = Split-Path -leaf -path (Get-Location)
-  "$p> "
-}
-```
-
-
-### Get-FilesByType
+## Size and Number of Files by Extension
 
 This function lists the total number and size (in MB) of all files with the same extension in a directory and all child directories. Equivalent to a MySQL `SELECT Extension, COUNT(Extension), SUM(Size) FROM ls GROUP BY Extension`.
-
 
 ```powershell
 Function Get-FilesByType
@@ -119,9 +64,32 @@ Function Get-FilesByType
 }
 ```
 
-### List-Functions
+## Short Prompt
 
-Finally, this is an alias that returns a list of all the custom functions you've defined!
+Changes the command-prompt to display on the current directory, not the full directory path. Doesn't have to be called, runs at startup.
+
+```powershell
+Function prompt
+{
+  $p = Split-Path -leaf -path (Get-Location)
+  "$p> "
+}
+```
+
+## Shortcut to Directory
+
+Changes directory to a specified location, pretty simple.  
+
+```powershell
+Function projects
+{
+  cd D:\data\lab\code\
+}
+```
+
+## List User-Defined Functions
+
+Returns a list of all the custom functions you've defined.
 
 ```powershell
 Function List-Functions
@@ -129,3 +97,14 @@ Function List-Functions
 	Get-ChildItem function:\
 }
 ```
+
+## Edit PowerShell Profile
+
+Finally, this command opens your PowerShell Profile with NotePad++ (assumes that alias is defined as above).
+
+```powershell
+Function Edit-Profile
+{
+  np $profile
+}
+``
