--- a/content/post/2018-05-01-boardgamegeek.Rmd
+++ b/content/post/2018-05-01-boardgamegeek.Rmd
@@ -172,30 +172,34 @@ Within the Top 10,000, crowdfunded games appear to be steadily increasing their 
 
 It's worth reiterating that this dataset is biased towards at least "Mediocre" games, and that other factors besides how well a game plays certainly influence customers and their ratings. KickStarter games have a tendency to be beautiful, component-rich, and expensive products, and are notorious for their lengthy design/distribution cycles that seem to be pock-marked with endless delays. It's no mystery why games that make it out of development hell are so lauded by their fans, but by constraining the dataset as I have we may be missing out on the other side of the story. To conclude my thoughts on Kickstarter's influence in the board game scene -- customers should buy what they like and fans shouldn't worry about the "state of the hobby" too much.
 
-## Game Proximity
-
-In this final section, I wanted to use BoardGameGeek's parameters to determine game proximity and create a recommendation engine based on this metric. I used the [t-Distributed Stochastic Neighbor Embedding (t-SNE)](https://lvdmaaten.github.io/tsne/) algorithm because of its ability to work with "high-dimensional datasets", which ours certainly is. I chose not to include Rating or Rank variable to avoid favoritism[^7], instead wanting to focus on grouping and recommending games that share similar mechanics, themes, and play-styles.
-
-[^7]: There are still a few popularity measures included however, including the number of users who Own, Want, and have the game available for trade. I thought this might help to group older and newer games in a helpful way, which I ultimately believe succeeded.
-
-```{r, eval=F, echo=F}
-TSNE1 <- boardgames %>%
-  select(., Year, Avg_Weight, BGG_Min_Age, BGG_Num_Players,
-         Play_Time, Num_Owned, Num_Trading, Num_Wanting, Num_Wishing,
-         one_of(mechanics), one_of(categories), Crowdfunded) %>%
-  sapply(., function(x) as.numeric(x)) %>%
-  tsne::tsne(., perplexity = 50)
-
-boardgames %<>%
-  mutate(TSNE1_x = TSNE1[,1]) %>%
-  mutate(TSNE1_y = TSNE1[,2])
+```{r, eval = F, echo = F}
+# ## Game Proximity
+# 
+# In this final section, I wanted to use BoardGameGeek's parameters to determine game proximity and create a recommendation engine based on this metric. I used the [t-Distributed Stochastic Neighbor Embedding (t-SNE)](https://lvdmaaten.github.io/tsne/) algorithm because of its ability to work with "high-dimensional datasets", which ours certainly is. I chose not to include Rating or Rank variable to avoid favoritism[^7], instead wanting to focus on grouping and recommending games that share similar mechanics, themes, and play-styles.
+# 
+# [^7]: There are still a few popularity measures included however, including the number of users who Own, Want, and have the game available for trade. I thought this might help to group older and newer games in a helpful way, which I ultimately believe succeeded.
+# 
+# ```{r, eval=F, echo=F}
+# TSNE1 <- boardgames %>%
+#   select(., Year, Avg_Weight, BGG_Min_Age, BGG_Num_Players,
+#          Play_Time, Num_Owned, Num_Trading, Num_Wanting, Num_Wishing,
+#          one_of(mechanics), one_of(categories), Crowdfunded) %>%
+#   sapply(., function(x) as.numeric(x)) %>%
+#   tsne::tsne(., perplexity = 50)
+# 
+# boardgames %<>%
+#   mutate(TSNE1_x = TSNE1[,1]) %>%
+#   mutate(TSNE1_y = TSNE1[,2])
+# ```
+# 
+# ```{r tsne_plot, message=F, warning=F, echo=F, fig.width=6, fig.height=4, eval=F}
+# tsne_plot <- ggplotly(results$plots$TSNE_Plot,
+#                       tooltip = c("Name", "Avg_Rating", "Crowdfunded"),
+#                       width = 6, height = 4)
+# htmlwidgets::saveWidget(tsne_plot, file = "tsne_plot.html", selfcontained = FALSE)
+# ```
+# 
+# [Here you can find am interactive visualization](../data/boardgame_data/tsne_plot/index.html) of this grouping, and I'm really pleased with the clustering. Games that I mentally group together are closely associated: Abstracts (Hive, Patchwork, Santorini), "gateway games" (Dominion, 7 Wonders, Catan, TTR, etc.), and component-dense Kickstarter stars (Kingdom Death and Gloomhaven), among many others. Additionally, I'm glad that the highly rated games are interspersed with lower rated titles.
 ```
 
-```{r tsne_plot, message=F, warning=F, echo=F, fig.width=6, fig.height=4, eval=F}
-tsne_plot <- ggplotly(results$plots$TSNE_Plot,
-                      tooltip = c("Name", "Avg_Rating", "Crowdfunded"),
-                      width = 6, height = 4)
-htmlwidgets::saveWidget(tsne_plot, file = "tsne_plot.html", selfcontained = FALSE)
-```
 
-[Here you can find am interactive visualization](../data/boardgame_data/tsne_plot/index.html) of this grouping, and I'm really pleased with the clustering. Games that I mentally group together are closely associated: Abstracts (Hive, Patchwork, Santorini), "gateway games" (Dominion, 7 Wonders, Catan, TTR, etc.), and component-dense Kickstarter stars (Kingdom Death and Gloomhaven), among many others. Additionally, I'm glad that the highly rated games are interspersed with lower rated titles.
